# Thesis-RL-Sweep

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
analysis/: __init__.py  generate_thesis_figures.py  plot_ablations.py  plot_baselines.py  plot_generalization.py  rliable_analysis.py
configs/: dqn_procgen_baseline.yaml  experiment_matrix.yaml  game_notes.yaml  ppo_procgen_baseline.yaml  ppo_procgen_drac.yaml  ppo_procgen_plr.yaml  ppo_procgen_plr_drac.yaml  ppo_procgen_rad.yaml  ppo_procgen_ucb_drac.yaml  tier_essential.yaml  tier_strong.yaml
scripts/: diagnose_gpu.py  quick_test.sh  run_baseline.sh  run_encoder_ablation.sh  run_essential_tier.py  run_experiment_matrix.py  run_num_levels_sweep.py  run_strong_thesis_tier.py  run_sweep.sh  validate_setup.py
src/: __init__.py  augmentations.py  checkpoint.py  drac.py  env_utils.py  evaluate.py  networks.py  plr.py  rad.py  train_dqn.py  train_ppo.py  ucb_drac.py  utils.py
